--- a/index.html
+++ b/index.html
@@ -15,17 +15,33 @@
         <div class="search"></div>
         <nav>
           <span class="general-links">
-            <a href="">Program</a>
-            <a href="">Enterprise</a>
-            <a href="">Universities</a>
+            <a href="#">Program</a>
+            <a href="#">Enterprise</a>
+            <a href="#">Universities</a>
           </span>
-          <a href="" class="sign-in-link">Sign in</a>
+          <a href="#" class="sign-in-link">Sign in</a>
           <span class="highlighted">
-            <a href="">Create free account</a>
+            <a href="#">Create free account</a>
+        </nav>
+      </header>
+        <div class="font-1">Up Your <b>Skills</b></div> 
+        <div class="font-1">To <b>Advance</b> Your</div> 
+        <div class="font-1"><b>Career</b> Path</div>
+      </div>
+      <div>
+         <p>Provides you with latest online warning system and</p>
+         <p>material that help your knowlege growing</p>
+      </div>
+      <header>
+        <nav>
+          <span class="highlighted">
+            <a href="#">Get Started</a>
+          </span>
+          <span class="highlighted-2">
+            <a href="#">Get free trial</a>
           </span>
         </nav>
       </header>
-
       <div class="collaborators">
         <div class="info">
           <b>250+</b>
@@ -33,10 +49,10 @@
           <span class="text"></span>
         </div>
         <div class="company-icons">
-          <img src="/assets/duolingo.svg" alt="" />
-          <img src="/assets/codecov.svg" alt="" />
-          <img src="/assets/user-testing.svg" alt="" />
-          <img src="/assets/magic-leap.svg" alt="" />
+          <img src="/assets/duolingo.svg" alt="#" />
+          <img src="/assets/codecov.svg" alt="#" />
+          <img src="/assets/user-testing.svg" alt="#" />
+          <img src="/assets/magic-leap.svg" alt="#" />
         </div>
       </div>
     </div>
