--- a/index.html
+++ b/index.html
@@ -22,26 +22,27 @@
           <a href="#" class="sign-in-link">Sign in</a>
           <span class="highlighted">
             <a href="#">Create free account</a>
+          </span>
         </nav>
       </header>
         <div class="font-1">Up Your <b>Skills</b></div> 
         <div class="font-1">To <b>Advance</b> Your</div> 
         <div class="font-1"><b>Career</b> Path</div>
       </div>
-      <div>
+      <div class="container">
          <p>Provides you with latest online warning system and</p>
          <p>material that help your knowlege growing</p>
       </div>
-      <header>
+      <div class="container">
         <nav>
           <span class="highlighted">
             <a href="#">Get Started</a>
           </span>
-          <span class="highlighted-2">
+          <span class="getfreetrial">
             <a href="#">Get free trial</a>
           </span>
         </nav>
-      </header>
+      </div>
       <div class="collaborators">
         <div class="info">
           <b>250+</b>
