bugfix: prettier html errors

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="./styles/header.css" />
-    <link rel="stylesheet" href="./styles/section.css">
+    <link rel="stylesheet" href="./styles/section.css" />
   </head>
   <body>
     <div class="container">
@@ -26,59 +26,71 @@
           </span>
         </nav>
       </header>
+
       <div class="container">
         <div class="banner">
-          <div class="font-1">Up Your <b>Skills</b>To <b>Advance</b> Your <b>Career</b> Path</div>
-           <p>Provides you with latest online warning system</p>
-           <p>and material that help your knowlege growing</p>
-           <nav class="banner-buttons">
+          <div class="font-1">
+            Up Your <b>Skills</b>To <b>Advance</b> Your <b>Career</b> Path
+          </div>
+          <p>Provides you with latest online warning system</p>
+          <p>and material that help your knowlege growing</p>
+          <nav class="banner-buttons">
             <span class="getstarted">
               <a href="#">Get Started</a>
             </span>
             <span class="getfreetrial">
               <a href="#">Get free trial</a>
             </span>
-           </nav>
+          </nav>
         </div>
-      </div>
-      <div class="collaborators">
-        <div class="info">
-          <b>250+</b>
-          <h4>Collaborator</h4>
-          <span class="text"></span>
+        <div class="collaborators">
+          <div class="info">
+            <b>250+</b>
+            <h4>Collaborator</h4>
+            <span class="text"></span>
+          </div>
+          <div class="company-icons">
+            <img src="/assets/duolingo.svg" alt="#" />
+            <img src="/assets/codecov.svg" alt="#" />
+            <img src="/assets/user-testing.svg" alt="#" />
+            <img src="/assets/magic-leap.svg" alt="#" />
+          </div>
         </div>
-        <div class="company-icons">
-          <img src="/assets/duolingo.svg" alt="#" />
-          <img src="/assets/codecov.svg" alt="#" />
-          <img src="/assets/user-testing.svg" alt="#" />
-          <img src="/assets/magic-leap.svg" alt="#" />
+        <section>
+          <div class="section-info">
+            <div class="category">Our Services</div>
+            <h3 class="title">
+              Fostering a playful & engaging learning environmental
+            </h3>
+          </div>
+          <div class="articles">
+            <div class="article-card">
+              <span class="title">User Expirience</span>
+              <span class="user"
+                >Lessons on design that cover the most recent
+                developments.</span
+              >
+              <span class="expirience">Learn More</span>
+            </div>
+            <div class="article-card">
+              <span class="title">Web Development</span>
+              <span class="more"
+                >Lessons on design that cover the most recent
+                developments.</span
+              >
+              <span class="learnmore">Learn More ❯</span>
+            </div>
+            <div class="article-card">
+              <span class="title">Marketing</span>
+              <span class="more"
+                >Marketing courses that cover the most recent marketing
+                trends</span
+              >
+              <span class="learnmore">Learn More ❯</span>
+            </div>
+          </div>
+        </section>
       </div>
-
-
-    <div class="container">
-          <section>
-            <div class="section-info">
-              <div class="category">Our Services</div>
-              <h3 class="title">Fostering a playful & engaging learning environmental</h3>
-            </div>
-            <div class="articles">
-              <div class="article-card">
-                <span class="title">User Expirience</span>
-                <span class="user">Lessons on design that cover the most recent developments.</span>
-                <span class="expirience">Learn More</span>
-              </div>
-              <div class="article-card">
-                <span class="title">Web Development</span>
-                <span class="more">Lessons on design that cover the most recent developments.</span>
-                <span class="learnmore">Learn More ❯</span>
-              </div>
-              <div class="article-card">
-                <span class="title">Marketing</span>
-                <span class="more">Marketing courses that cover the most recent marketing trends</span>
-                <span class="learnmore">Learn More ❯</span>
-            </div>
-          </section>
     </div>
   </body>
 </html>
-
