--- a/index.html
+++ b/index.html
@@ -76,21 +76,48 @@
               <span class="title">Web Development</span>
               <span class="more"
                 >Lessons on design that cover the most recent
-                developments.</span
-              >
+                developments.</span>
               <span class="learnmore">Learn More ❯</span>
             </div>
             <div class="article-card">
               <span class="title">Marketing</span>
               <span class="more"
                 >Marketing courses that cover the most recent marketing
-                trends</span
-              >
+                trends</span>
               <span class="learnmore">Learn More ❯</span>
             </div>
           </div>
         </section>
+        <section>
+          <div class="section-2">
+            <div class="user">
+              <div class="explore">Explore Programs</div>
+            <h3 class="popular">
+              Our Most Popular Class
+            </h3>
+            <h5>Let's join our famous class, the knowledge provided will definitely be useful for you.</h5>
+            <div class="sections">
+              <div class="card">
+                <img src="/pages/Image (1).png" alt="design">
+                <span class="explore">Design</span>
+                <span class="popular">Figma UI UX Design..</span>
+                <h5>Use Figma to get a job in UI Design, User Interface, User Experience design.</h5>
+              </div>
+              <div class="card">
+                <img src="/pages/Image (2).png" alt="design">
+                <span class="explore">Design</span>
+                <span class="popular">Learn With Shoaib</span>
+                <h5>Design Web Sites and Mobile Apps that Your Users Love and Return to Again.</h5>
+              </div>
+              <div class="card">
+                <img src="/pages/Image (3).png" alt="design">
+                <span class="explore">Design</span>
+                <span class="popular">Building User Interface..</span>
+                <h5>Learn how to apply User Experience (UX) principles to your website designs.</h5>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
-    </div>
   </body>
 </html>
