--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
               <a href="#">Get free trial</a>
             </span>
           </nav>
+          <img class="kartinka" src="/pages/photo_2023-02-09_14-31-22.jpg" alt="kartinka">
         </div>
         <div class="collaborators">
           <div class="info">
