--- a/index.html
+++ b/index.html
@@ -42,8 +42,15 @@
               <a href="#">Get free trial</a>
             </span>
           </nav>
-          <img class="kartinka" src="/pages/photo_2023-02-09_14-31-22.jpg" alt="kartinka">
+          <div class="banner-image">
+              <img class="girl" src="/pages/young-student-woman-wearing-denim-jacket-eyeglasses-holding-colorful-folders-showing-thumb-up-pink-transformed 1 (1).png" alt="girl">
+              <img class="k2" src="/pages/photo_2023-02-21_17-26-11.jpg" alt="2k" />
+              <img class="k5" src="/pages/photo_2023-02-21_17-29-16.jpg" alt="5k" />
+              <img class="k250" src="/pages/photo_2023-02-21_17-28-11.jpg" alt="250" />
         </div>
+          </div>
+        </div>
+
         <div class="collaborators">
           <div class="info">
             <b>250+</b>
