--- a/index.html
+++ b/index.html
@@ -126,6 +126,64 @@
             </div>
           </div>
         </section>
-      </div>
+        <section>
+          <div class="tutorsec">
+            <div class="tutors">Tutors</div>
+            <h3 class="meet">Meet the Heroes</h3>
+            <div class="text">On Ed-Circle, instructors from all over the world instruct millions of students. We offer the knowledge and abilities.</div>
+          </div>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="/pages/Avatar.png" class="card-img-top" alt="avatar">
+                <div class="card-body">
+                  <h5 class="card-title">Theresa Webb</h5>
+                  <p class="card-text">Application Support Analyst Lead</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Former co-founder of Opendoor. Early staff at Spotify and Clearbit.</small>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="/pages/Avatar (1).png" class="card-img-top" alt="avatar1">
+                <div class="card-body">
+                  <h5 class="card-title">Albert Flores</h5>
+                  <p class="card-text">Director, Undergraduate Analytics and Planning</p>
+                </div>
+            <div class="card-footer">
+                  <small class="text-muted">Lead engineering teams at Figma, Pitch, and Protocol Labs.</small>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="/pages/Avatar (2).png" class="card-img-top" alt="avatar2">
+                <div class="card-body">
+                  <h5 class="card-title">Albert Flores</h5>
+                  <p class="card-text">Career Educator</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Former PM for Linear, Lambda School, and On Deck.
+                  </small>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="/pages/Avatar (3).png" class="card-img-top" alt="avatar3">
+                <div class="card-body">
+                  <h5 class="card-title">Marvin McKinney</h5>
+                  <p class="card-text">Co-op & Internships Program & Operations Manager</p>
+                </div>
+            <div class="card-footer">
+                  <small class="text-muted">Former frontend dev for Linear, Coinbase, and Postscript.</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+    </div>
   </body>
 </html>
