--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="./styles/header.css" />
     <link rel="stylesheet" href="./styles/section.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div class="container">
@@ -43,147 +49,208 @@
             </span>
           </nav>
           <div class="banner-image">
-              <img class="girl" src="/pages/young-student-woman-wearing-denim-jacket-eyeglasses-holding-colorful-folders-showing-thumb-up-pink-transformed 1 (1).png" alt="girl">
-              <img class="k2" src="/pages/photo_2023-02-21_17-26-11.jpg" alt="2k" />
-              <img class="k5" src="/pages/photo_2023-02-21_17-29-16.jpg" alt="5k" />
-              <img class="k250" src="/pages/photo_2023-02-21_17-28-11.jpg" alt="250" />
-        </div>
+            <img
+              class="girl"
+              src="/pages/young-student-woman-wearing-denim-jacket-eyeglasses-holding-colorful-folders-showing-thumb-up-pink-transformed 1 (1).png"
+              alt="girl"
+            />
+            <img
+              class="k2"
+              src="/pages/photo_2023-02-21_17-26-11.jpg"
+              alt="2k"
+            />
+            <img
+              class="k5"
+              src="/pages/photo_2023-02-21_17-29-16.jpg"
+              alt="5k"
+            />
+            <img
+              class="k250"
+              src="/pages/photo_2023-02-21_17-28-11.jpg"
+              alt="250"
+            />
           </div>
         </div>
+      </div>
 
-        <div class="collaborators">
-          <div class="info">
-            <b>250+</b>
-            <h4>Collaborator</h4>
-            <span class="text"></span>
+      <div class="collaborators">
+        <div class="info">
+          <b>250+</b>
+          <h4>Collaborator</h4>
+          <span class="text"></span>
+        </div>
+        <div class="company-icons">
+          <img src="/assets/duolingo.svg" alt="#" />
+          <img src="/assets/codecov.svg" alt="#" />
+          <img src="/assets/user-testing.svg" alt="#" />
+          <img src="/assets/magic-leap.svg" alt="#" />
+        </div>
+      </div>
+      <section>
+        <div class="section-info">
+          <div class="category">Our Services</div>
+          <h3 class="title">
+            Fostering a playful & engaging learning environmental
+          </h3>
+        </div>
+        <div class="articles">
+          <div class="article-card">
+            <span class="title">User Expirience</span>
+            <span class="user"
+              >Lessons on design that cover the most recent developments.</span
+            >
+            <span class="expirience">Learn More</span>
           </div>
-          <div class="company-icons">
-            <img src="/assets/duolingo.svg" alt="#" />
-            <img src="/assets/codecov.svg" alt="#" />
-            <img src="/assets/user-testing.svg" alt="#" />
-            <img src="/assets/magic-leap.svg" alt="#" />
+          <div class="article-card">
+            <span class="title">Web Development</span>
+            <span class="more"
+              >Lessons on design that cover the most recent developments.</span
+            >
+            <span class="learnmore">Learn More ❯</span>
+          </div>
+          <div class="article-card">
+            <span class="title">Marketing</span>
+            <span class="more"
+              >Marketing courses that cover the most recent marketing
+              trends</span
+            >
+            <span class="learnmore">Learn More ❯</span>
           </div>
         </div>
-        <section>
-          <div class="section-info">
-            <div class="category">Our Services</div>
-            <h3 class="title">
-              Fostering a playful & engaging learning environmental
-            </h3>
+      </section>
+      <section>
+        <div class="section-2">
+          <div class="user">
+            <div class="explore">Explore Programs</div>
+            <h3 class="popular">Our Most Popular Class</h3>
           </div>
-          <div class="articles">
-            <div class="article-card">
-              <span class="title">User Expirience</span>
-              <span class="user"
-                >Lessons on design that cover the most recent
-                developments.</span
-              >
-              <span class="expirience">Learn More</span>
+          <h5>
+            Let's join our famous class, the knowledge provided will definitely
+            be useful for you.
+          </h5>
+          <div class="sections">
+            <div class="card">
+              <img src="/pages/Image (1).png" alt="design" />
+              <span class="explore">Design</span>
+              <span class="popular">Figma UI UX Design..</span>
+              <h5>
+                Use Figma to get a job in UI Design, User Interface, User
+                Experience design.
+              </h5>
             </div>
-            <div class="article-card">
-              <span class="title">Web Development</span>
-              <span class="more"
-                >Lessons on design that cover the most recent
-                developments.</span>
-              <span class="learnmore">Learn More ❯</span>
+            <div class="card">
+              <img src="/pages/Image (2).png" alt="design" />
+              <span class="explore">Design</span>
+              <span class="popular">Learn With Shoaib</span>
+              <h5>
+                Design Web Sites and Mobile Apps that Your Users Love and Return
+                to Again.
+              </h5>
             </div>
-            <div class="article-card">
-              <span class="title">Marketing</span>
-              <span class="more"
-                >Marketing courses that cover the most recent marketing
-                trends</span>
-              <span class="learnmore">Learn More ❯</span>
-            </div>
-          </div>
-        </section>
-        <section>
-          <div class="section-2">
-            <div class="user">
-              <div class="explore">Explore Programs</div>
-            <h3 class="popular">
-              Our Most Popular Class
-            </h3>
-            <h5>Let's join our famous class, the knowledge provided will definitely be useful for you.</h5>
-            <div class="sections">
-              <div class="card">
-                <img src="/pages/Image (1).png" alt="design">
-                <span class="explore">Design</span>
-                <span class="popular">Figma UI UX Design..</span>
-                <h5>Use Figma to get a job in UI Design, User Interface, User Experience design.</h5>
-              </div>
-              <div class="card">
-                <img src="/pages/Image (2).png" alt="design">
-                <span class="explore">Design</span>
-                <span class="popular">Learn With Shoaib</span>
-                <h5>Design Web Sites and Mobile Apps that Your Users Love and Return to Again.</h5>
-              </div>
-              <div class="card">
-                <img src="/pages/Image (3).png" alt="design">
-                <span class="explore">Design</span>
-                <span class="popular">Building User Interface..</span>
-                <h5>Learn how to apply User Experience (UX) principles to your website designs.</h5>
-              </div>
+            <div class="card">
+              <img src="/pages/Image (3).png" alt="design" />
+              <span class="explore">Design</span>
+              <span class="popular">Building User Interface..</span>
+              <h5>
+                Learn how to apply User Experience (UX) principles to your
+                website designs.
+              </h5>
             </div>
           </div>
-        </section>
-        <section>
-          <div class="tutorsec">
-            <div class="tutors">Tutors</div>
-            <h3 class="meet">Meet the Heroes</h3>
-            <div class="text">On Ed-Circle, instructors from all over the world instruct millions of students. We offer the knowledge and abilities.</div>
+        </div>
+      </section>
+      <section>
+        <div class="tutorsec">
+          <div class="tutors">Tutors</div>
+          <h3 class="meet">Meet the Heroes</h3>
+          <div class="text">
+            On Ed-Circle, instructors from all over the world instruct millions
+            of students. We offer the knowledge and abilities.
           </div>
-          <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
-              <div class="card h-100">
-                <img src="/pages/Avatar.png" class="card-img-top" alt="avatar">
-                <div class="card-body">
-                  <h5 class="card-title">Theresa Webb</h5>
-                  <p class="card-text">Application Support Analyst Lead</p>
-                </div>
-                <div class="card-footer">
-                  <small class="text-muted">Former co-founder of Opendoor. Early staff at Spotify and Clearbit.</small>
-                </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div class="card h-100">
+              <img src="/pages/Avatar.png" class="card-img-top" alt="avatar" />
+              <div class="card-body">
+                <h5 class="card-title">Theresa Webb</h5>
+                <p class="card-text">Application Support Analyst Lead</p>
               </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="/pages/Avatar (1).png" class="card-img-top" alt="avatar1">
-                <div class="card-body">
-                  <h5 class="card-title">Albert Flores</h5>
-                  <p class="card-text">Director, Undergraduate Analytics and Planning</p>
-                </div>
-            <div class="card-footer">
-                  <small class="text-muted">Lead engineering teams at Figma, Pitch, and Protocol Labs.</small>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="/pages/Avatar (2).png" class="card-img-top" alt="avatar2">
-                <div class="card-body">
-                  <h5 class="card-title">Albert Flores</h5>
-                  <p class="card-text">Career Educator</p>
-                </div>
-                <div class="card-footer">
-                  <small class="text-muted">Former PM for Linear, Lambda School, and On Deck.
-                  </small>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="/pages/Avatar (3).png" class="card-img-top" alt="avatar3">
-                <div class="card-body">
-                  <h5 class="card-title">Marvin McKinney</h5>
-                  <p class="card-text">Co-op & Internships Program & Operations Manager</p>
-                </div>
-            <div class="card-footer">
-                  <small class="text-muted">Former frontend dev for Linear, Coinbase, and Postscript.</small>
-                </div>
+              <div class="card-footer">
+                <small class="text-muted"
+                  >Former co-founder of Opendoor. Early staff at Spotify and
+                  Clearbit.</small
+                >
               </div>
             </div>
           </div>
-        </section>
+          <div class="col">
+            <div class="card h-100">
+              <img
+                src="/pages/Avatar (1).png"
+                class="card-img-top"
+                alt="avatar1"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Albert Flores</h5>
+                <p class="card-text">
+                  Director, Undergraduate Analytics and Planning
+                </p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted"
+                  >Lead engineering teams at Figma, Pitch, and Protocol
+                  Labs.</small
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img
+                src="/pages/Avatar (2).png"
+                class="card-img-top"
+                alt="avatar2"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Albert Flores</h5>
+                <p class="card-text">Career Educator</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted"
+                  >Former PM for Linear, Lambda School, and On Deck.
+                </small>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img
+                src="/pages/Avatar (3).png"
+                class="card-img-top"
+                alt="avatar3"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Marvin McKinney</h5>
+                <p class="card-text">
+                  Co-op & Internships Program & Operations Manager
+                </p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted"
+                  >Former frontend dev for Linear, Coinbase, and
+                  Postscript.</small
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
