--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
       </section>
       <section>
-        <div class="section-2">
+        <div class="intro">
           <div class="user">
             <div class="explore">Explore Programs</div>
             <h3 class="popular">Our Most Popular Class</h3>
@@ -129,7 +129,7 @@
             be useful for you.
           </h5>
           <div class="sections">
-            <div class="card">
+            <div class="custom-card">
               <img src="/pages/Image (1).png" alt="design" />
               <span class="explore">Design</span>
               <span class="popular">Figma UI UX Design..</span>
@@ -138,7 +138,7 @@
                 Experience design.
               </h5>
             </div>
-            <div class="card">
+            <div class="custom-card">
               <img src="/pages/Image (2).png" alt="design" />
               <span class="explore">Design</span>
               <span class="popular">Learn With Shoaib</span>
@@ -147,7 +147,7 @@
                 to Again.
               </h5>
             </div>
-            <div class="card">
+            <div class="custom-card">
               <img src="/pages/Image (3).png" alt="design" />
               <span class="explore">Design</span>
               <span class="popular">Building User Interface..</span>
@@ -160,7 +160,7 @@
         </div>
       </section>
       <section>
-        <div class="tutorsec">
+        <div class="sectiontutor">
           <div class="tutors">Tutors</div>
           <h3 class="meet">Meet the Heroes</h3>
           <div class="text">
