--- a/index.html
+++ b/index.html
@@ -51,22 +51,22 @@
           <div class="banner-image">
             <img
               class="girl"
-              src="/pages/young-student-woman-wearing-denim-jacket-eyeglasses-holding-colorful-folders-showing-thumb-up-pink-transformed 1 (1).png"
+              src="/assets/young.png"
               alt="girl"
             />
             <img
               class="k2"
-              src="/pages/photo_2023-02-21_17-26-11.jpg"
+              src="/assets/photo_2023-02-21_17-26-11.jpg"
               alt="2k"
             />
             <img
               class="k5"
-              src="/pages/photo_2023-02-21_17-29-16.jpg"
+              src="/assets/photo_2023-02-21_17-29-16.jpg"
               alt="5k"
             />
             <img
               class="k250"
-              src="/pages/photo_2023-02-21_17-28-11.jpg"
+              src="/assets/photo_2023-02-21_17-28-11.jpg"
               alt="250"
             />
           </div>
@@ -93,29 +93,54 @@
             Fostering a playful & engaging learning environmental
           </h3>
         </div>
-        <div class="articles">
-          <div class="article-card">
-            <span class="title">User Expirience</span>
-            <span class="user"
-              >Lessons on design that cover the most recent developments.</span
-            >
-            <span class="expirience">Learn More</span>
+        <div id="carouselExampleIndicators" class="carousel slide">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
           </div>
-          <div class="article-card">
-            <span class="title">Web Development</span>
-            <span class="more"
-              >Lessons on design that cover the most recent developments.</span
-            >
-            <span class="learnmore">Learn More ❯</span>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+             <div class="articles">
+               <div class="article-card">
+                 <span class="title">User Expirience</span>
+                 <span class="user"
+                   >Lessons on design that cover the most recent developments.</span>
+                 <span class="expirience">Learn More</span>
+               </div>
+              </div>
+            </div>
+            <div class="carousel-item">        
+              <div class="articles">
+                <div class="webdevelop">
+                  <span class="title">Web Development</span>
+                  <span class="more"
+                    >Lessons on design that cover the most recent developments.</span>
+                  <span class="learnmore">Learn More ❯</span>
+                </div>
+              </div>
+            </div>
+            </div>
+            <div class="carousel-item">
+              <div class="articles">
+                <div class="webdevelop">
+                  <span class="title">Marketing</span>
+                  <span class="more"
+                     >Marketing courses that cover the most recent marketing
+                     trends</span>
+                  <span class="learnmore">Learn More ❯</span>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="article-card">
-            <span class="title">Marketing</span>
-            <span class="more"
-              >Marketing courses that cover the most recent marketing
-              trends</span
-            >
-            <span class="learnmore">Learn More ❯</span>
-          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
       </section>
       <section>
@@ -130,7 +155,7 @@
           </h5>
           <div class="sections">
             <div class="custom-card">
-              <img src="/pages/Image (1).png" alt="design" />
+              <img src="/assets/image(1).png" alt="design" />
               <span class="explore">Design</span>
               <span class="popular">Figma UI UX Design..</span>
               <h5>
@@ -139,7 +164,7 @@
               </h5>
             </div>
             <div class="custom-card">
-              <img src="/pages/Image (2).png" alt="design" />
+              <img src="/assets/image(2).png" alt="design" />
               <span class="explore">Design</span>
               <span class="popular">Learn With Shoaib</span>
               <h5>
@@ -148,7 +173,7 @@
               </h5>
             </div>
             <div class="custom-card">
-              <img src="/pages/Image (3).png" alt="design" />
+              <img src="/assets/image(3).png" alt="design" />
               <span class="explore">Design</span>
               <span class="popular">Building User Interface..</span>
               <h5>
@@ -171,7 +196,7 @@
         <div class="row">
           <div class="col">
             <div class="card h-100">
-              <img src="/pages/Avatar.png" class="card-img-top" alt="avatar" />
+              <img src="/assets/avatar.png" class="card-img-top" alt="avatar" />
               <div class="card-body">
                 <h5 class="card-title">Theresa Webb</h5>
                 <p class="card-text">Application Support Analyst Lead</p>
@@ -187,7 +212,7 @@
           <div class="col">
             <div class="card h-100">
               <img
-                src="/pages/Avatar (1).png"
+                src="/assets/avatar(1).png"
                 class="card-img-top"
                 alt="avatar1"
               />
@@ -208,7 +233,7 @@
           <div class="col">
             <div class="card h-100">
               <img
-                src="/pages/Avatar (2).png"
+                src="/assets/avatar(2).png"
                 class="card-img-top"
                 alt="avatar2"
               />
@@ -226,7 +251,7 @@
           <div class="col">
             <div class="card h-100">
               <img
-                src="/pages/Avatar (3).png"
+                src="/assets/avatar(3).png"
                 class="card-img-top"
                 alt="avatar3"
               />
