--- a/index.html
+++ b/index.html
@@ -94,53 +94,50 @@
           </h3>
         </div>
         <div id="carouselExampleIndicators" class="carousel slide">
-          <div class="carousel-indicators">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="col-md-4">
+                <div class="articles">
+                  <div class="article-card">
+                    <span class="title">User Expirience</span>
+                    <span class="user"
+                      >Lessons on design that cover the most recent developments.</span>
+                    <span class="expirience">Learn More</span>
+                  </div>
+                 </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="carousel-item">
+                <div class="articles">
+                  <div class="webdevelop">
+                    <span class="title">Web Development</span>
+                    <span class="more"
+                      >Lessons on design that cover the most recent developments.</span>
+                    <span class="learnmore">Learn More ❯</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="carousel-item">
+                <div class="articles">
+                  <div class="webdevelop">
+                    <span class="title">Marketing</span>
+                    <span class="more"
+                       >Marketing courses that cover the most recent marketing
+                       trends</span>
+                    <span class="learnmore">Learn More ❯</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
           </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-             <div class="articles">
-               <div class="article-card">
-                 <span class="title">User Expirience</span>
-                 <span class="user"
-                   >Lessons on design that cover the most recent developments.</span>
-                 <span class="expirience">Learn More</span>
-               </div>
-              </div>
-            </div>
-            <div class="carousel-item">        
-              <div class="articles">
-                <div class="webdevelop">
-                  <span class="title">Web Development</span>
-                  <span class="more"
-                    >Lessons on design that cover the most recent developments.</span>
-                  <span class="learnmore">Learn More ❯</span>
-                </div>
-              </div>
-            </div>
-            </div>
-            <div class="carousel-item">
-              <div class="articles">
-                <div class="webdevelop">
-                  <span class="title">Marketing</span>
-                  <span class="more"
-                     >Marketing courses that cover the most recent marketing
-                     trends</span>
-                  <span class="learnmore">Learn More ❯</span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
         </div>
       </section>
       <section>
