--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+    crossorigin="anonymous"
+  />
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="./styles/header.css" />
     <link rel="stylesheet" href="./styles/section.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
   </head>
   <body>
     <div class="container">
@@ -97,7 +97,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="col-md-4">
-                <div class="articles">
+                <div class="articles row">
                   <div class="article-card">
                     <span class="title">User Expirience</span>
                     <span class="user"
@@ -109,7 +109,7 @@
             </div>
             <div class="col-md-4">
               <div class="carousel-item">
-                <div class="articles">
+                <div class="articles row">
                   <div class="webdevelop">
                     <span class="title">Web Development</span>
                     <span class="more"
@@ -121,7 +121,7 @@
             </div>
             <div class="col-md-4">
               <div class="carousel-item">
-                <div class="articles">
+                <div class="articles row">
                   <div class="webdevelop">
                     <span class="title">Marketing</span>
                     <span class="more"
